# hampter

./: Cargo.toml  README.md
examples/: generator.rs
src/: auth.rs  lib.rs
src/types/: character.rs  chat.rs  error.rs  misc.rs  mod.rs  persona.rs  profile.rs  review.rs  tag.rs
