[package]
name = "hampter"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
chrono = { version = "0.4.39", features = ["now", "serde"] }
futures = "0.3.31"
getters2 = "0.1.4"
reqwest = { version = "0.12.9", features = ["blocking", "cookies", "http2", "json", "native-tls-alpn", "stream"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["io"] }
uuid = { version = "1.11.0", features = ["v7"] }
