[package]
name = "hampter"
description = "A 3rd party wrapper for the JanitorAI api"
version = "0.1.1"
edition = "2021"
license = "MIT"

[dependencies]
async-stream = "0.3.6"
chrono = { version = "0.4.39", features = ["now", "serde"] }
futures = "0.3.31"
getters2 = "0.1.4"
reqwest = { version = "0.12.9", features = ["blocking", "cookies", "http2", "json", "native-tls-alpn", "stream"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["io"] }
uuid = { version = "1.11.0", features = ["v7"] }
